<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="232dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtTitle"
        android:textAlignment="center"
        android:textColor="#DF1515"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/txtCostHint"
        android:inputType="number|numberDecimal"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/txtSpinner"
        android:layout_width="84dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:entries="@array/txtTipSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDirections" />

    <TextView
        android:id="@+id/txtDirections"
        android:layout_width="145dp"
        android:layout_height="19dp"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:text="@string/txtDirections"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCost"
        tools:text="@string/txtDirections" />

    <Button
        android:id="@+id/txtButton"
        android:layout_width="162dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtCalculateBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSpinner" />

    <TextView
        android:id="@+id/txtTip"
        android:layout_width="75dp"
        android:layout_height="53dp"
        android:layout_marginTop="52dp"
        android:text="@string/txtTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtButton" />

    <TextView
        android:id="@+id/txtTotalWTip"
        android:layout_width="75dp"
        android:layout_height="53dp"
        android:layout_marginTop="52dp"
        android:text="@string/txtTotalWTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="221dp"
        android:layout_height="231dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/money" />

</androidx.constraintlayout.widget.ConstraintLayout>